--- a/src/app/feature/edit-event/edit-event-form/edit-event-form.component.scss
+++ b/src/app/feature/edit-event/edit-event-form/edit-event-form.component.scss
@@ -1,22 +1,16 @@
-.form-tabs {
-  a {
-    ng-icon {
-      @apply text-primary;
-    }
-
-    span {
-      @apply hidden;
-    }
-
-    &.active {
-      @apply btn-secondary;
-
-      ng-icon {
-        @apply text-primary-content;
-      }
-      span {
-        @apply lg:block;
-      }
-    }
-  }
+.tab-content-0,
+.tab-content-1,
+.tab-content-2,
+.tab-content-3,
+.tab-content-4,
+.tab-content-5 {
+  @apply hidden;
+}
+.active-tab-0 .tab-content-0,
+.active-tab-1 .tab-content-1,
+.active-tab-2 .tab-content-2,
+.active-tab-3 .tab-content-3,
+.active-tab-4 .tab-content-4,
+.active-tab-5 .tab-content-5 {
+  @apply block;
 }
