fix: fix position of preview on edit event

--- a/src/app/feature/timeline/timeline.component.html
+++ b/src/app/feature/timeline/timeline.component.html
@@ -12,7 +12,7 @@
       </div>
 
       <div
-        class="item-content w-full overflow-hidden rounded-xl bg-base-100"
+        class="item-content w-full place-items-start overflow-hidden rounded-xl bg-base-100"
         [class.opacity-20]="event.loading">
         <app-timeline-event-main-content [event]="event" />
 
