--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,6 +4,9 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url('./assets/css/global.scss');
+@import url('./assets/css/animation.scss');
+
 h1,
 h2,
 h3,
