--- a/src/app/feature/timeline/components/add-event-button/add-event-button.component.scss
+++ b/src/app/feature/timeline/components/add-event-button/add-event-button.component.scss
@@ -1,16 +1,27 @@
+@use '../../../../../assets/css/global' as g;
+
+$icons-animation-duration: g.$animation-duration;
+
+@mixin icons-animation {
+  transition-duration: $icons-animation-duration;
+  transition-property: all;
+  animation-duration: $icons-animation-duration;
+  animation-name: edit-out;
+}
+
 .wrapper {
   &:hover .plus {
     animation: plus-in 0.15s linear;
     animation-fill-mode: forwards;
   }
   &:hover .edit {
-    animation: edit-in 0.2s;
+    animation-duration: 0.2s;
     animation-delay: 0.1s;
+    animation-name: edit-in;
     animation-fill-mode: forwards;
   }
 
   .btn {
-    transition: all 0.3s;
     .plus,
     .edit {
       position: absolute;
@@ -19,15 +30,13 @@
   }
 
   .plus {
-    animation: plus-out 0.3s;
-    transition: all 0.3s;
+    @include icons-animation;
   }
 
   .edit {
+    @include icons-animation;
     opacity: 0;
     transform: rotateZ(-70deg);
-    transition: all 0.3s;
-    animation: edit-out 0.3s;
   }
 }
 
