--- a/src/app/pages/non-authorized/develop/develop-page.component.html
+++ b/src/app/pages/non-authorized/develop/develop-page.component.html
@@ -43,5 +43,12 @@
         </div>
       </div>
     </div>
+
+    <div class="py-4" id="LoaderComponent">
+      <h2 class="text-2xl">LoaderComponent</h2>
+      <div class="relative mt-4 h-44">
+        <app-loader />
+      </div>
+    </div>
   </div>
 </app-layout>
