--- a/src/app/share/loader/loader.component.scss
+++ b/src/app/share/loader/loader.component.scss
@@ -1,3 +1,6 @@
+$loader-border-animation-duration: 5s;
+$loader-center-animation-duration: 1s;
+
 .loader {
   position: absolute;
   left: 50%;
@@ -6,8 +9,8 @@
   height: 100px;
   border-radius: 50px 50px 50px 0;
   transform: translate(-50%, -50%);
-  animation-name: animate;
-  animation-duration: 5s;
+  animation-name: loader-border-rotation;
+  animation-duration: $loader-border-animation-duration;
   animation-timing-function: cubic-bezier(0.45, 0, 0, 1);
   animation-iteration-count: infinite;
 
@@ -21,7 +24,7 @@
     display: inline-block;
     position: absolute;
     box-sizing: border-box;
-    animation: rotation 1s linear infinite;
+    animation: rotation $loader-center-animation-duration linear infinite;
   }
   .sub-loader::after {
     @apply border-4 border-transparent border-b-accent;
@@ -34,32 +37,5 @@
     width: 40px;
     height: 40px;
     border-radius: 50%;
-  }
-
-  @keyframes rotation {
-    0% {
-      transform: rotate(0deg);
-    }
-    100% {
-      transform: rotate(360deg);
-    }
-  }
-}
-
-@keyframes animate {
-  0% {
-    border-radius: 50px 50px 50px 5px;
-  }
-  25% {
-    border-radius: 5px 50px 50px 50px;
-  }
-  50% {
-    border-radius: 50px 5px 50px 50px;
-  }
-  75% {
-    border-radius: 50px 50px 5px 50px;
-  }
-  100% {
-    border-radius: 50px 50px 50px 5px;
   }
 }
