--- a/src/app/feature/edit-event/edit-event-form/upload-input/upload-input.component.html
+++ b/src/app/feature/edit-event/edit-event-form/upload-input/upload-input.component.html
@@ -1,30 +1,33 @@
+<form method="post" enctype="multipart/form-data">
+  <input
+    #fileUpload
+    name="image"
+    type="file"
+    multiple="false"
+    class="hidden"
+    accept="image/*"
+    (change)="handleFileSelect($event)" />
+</form>
 <button
   class="upload_image_container btn btn-square mt-4 h-full w-full bg-no-repeat p-4"
-  (click)="image.click()"
-  (keyup.enter)="image.click()">
+  (click)="fileUpload.click()"
+  (keyup.enter)="fileUpload.click()">
   <div class="flex h-56 flex-col place-content-center">
-    @if (previewImage().previewUrl) {
+    @if (previewUrl(); as preview) {
       <img
-        [src]="previewImage().previewUrl"
+        [src]="preview"
         class="event_image h-full w-full"
-        [class.preview]="previewImage().loading"
-        [alt]="form().controls.title.value" />
+        [class.preview]="isLoading()"
+        [alt]="" />
     }
 
-    @if (previewImage().loading) {
+    @if (isLoading()) {
       <app-loader />
     } @else {
       <p>drop or click</p>
     }
-    @if (previewImage().error) {
-      <p class="mt-4 font-bold text-error">{{ previewImage().error }}</p>
+    @if (previewImage()?.error) {
+      <p class="mt-4 font-bold text-error">{{ previewImage()?.error }}</p>
     }
   </div>
 </button>
-<input
-  #image
-  type="file"
-  multiple="false"
-  class="hidden"
-  accept="image/*"
-  (change)="handleFileSelect($event)" />
