--- a/src/app/feature/edit-event/edit-event.component.html
+++ b/src/app/feature/edit-event/edit-event.component.html
@@ -1,30 +1,34 @@
-@if (editEvent(); as editEvent) {
-  <ul
-    class="timeline timeline-vertical timeline-snap-icon mb-8 max-md:timeline-compact">
-    <li class="timeline-item" [class.skeleton]="editEvent.loading === true">
-      <div
-        class="timeline-middle"
-        [class.opacity-20]="editEvent.loading === true">
-        <app-timeline-event-icon [icon]="icon" [shouldAccentLine]="true" />
-      </div>
+@if (editEvent(); as event) {
+  @if (previewEvent(); as preview) {
+    <ul
+      class="timeline timeline-vertical timeline-snap-icon mb-8 max-md:timeline-compact">
+      <li class="timeline-item" [class.skeleton]="loading() === true">
+        <div class="timeline-middle" [class.opacity-20]="loading() === true">
+          <app-timeline-event-icon [icon]="icon" [shouldAccentLine]="true" />
+        </div>
 
-      <div
-        class="timeline-start w-full rounded-xl bg-base-100 p-2 text-end"
-        [class.opacity-20]="editEvent.loading === true">
-        <app-timeline-event-main-content [event]="previewEvent()" />
-      </div>
+        <div
+          class="timeline-start w-full rounded-xl bg-base-100 p-2 text-end"
+          [class.opacity-20]="loading() === true">
+          <app-timeline-event-main-content [event]="preview" />
+        </div>
+        <div class="timeline-end h-full w-full">
+          <app-edit-event-form
+            [editEvent]="event"
+            [viewHelper]="formViewHelper()"
+            [openTab]="openTab()"
+            [loading]="loading()"
+            [isNew]="isNew()"
+            [enableUpload]="isUploadEnabled()"
+            (valuesChanged)="updatePreviewEvent($event)"
+            (urlChanged)="dispatchUpdateUrlPreview($event)"
+            (fileSelected)="handleFileSelected($event)"
+            (saveAction)="saveEvent()"
+            (dismissAction)="closeEditForm()" />
+        </div>
 
-      <div class="timeline-end h-full w-full">
-        <app-edit-event-form
-          [editEvent]="formEvent()"
-          [openTab]="openTab()"
-          [loading]="loading()"
-          (dismissAction)="closeEditForm()"
-          (valuesChanged)="updatePreviewEvent($event)"
-          (saveEvent)="saveEvent()" />
-      </div>
-
-      <hr class="bg-accent" [class.opacity-20]="editEvent.loading === true" />
-    </li>
-  </ul>
+        <hr class="bg-accent" [class.opacity-20]="loading() === true" />
+      </li>
+    </ul>
+  }
 }
