--- a/src/app/pages/authorized/my/my-page.component.html
+++ b/src/app/pages/authorized/my/my-page.component.html
@@ -33,7 +33,7 @@
             [show]="showConfirmWindow()"
             (confirmAction)="confirmDelete()"
             (dismissAction)="dismissDelete()"
-            confirmMessage="Are you shure you want to delete this event?"></app-modal-confirm>
+            confirmMessage="Are you shure you want to delete this event?" />
         }
       }
     }
