fix: fix flickering edit form

--- a/src/app/feature/edit-event/edit-event.component.html
+++ b/src/app/feature/edit-event/edit-event.component.html
@@ -12,7 +12,7 @@
           [class.opacity-20]="loading() === true">
           <app-timeline-event-main-content [event]="preview" />
         </div>
-        <div class="timeline-end h-full w-full">
+        <div class="timeline-end h-148 w-full lg:h-136">
           <app-edit-event-form
             [editEvent]="event"
             [viewHelper]="formViewHelper()"
