--- a/src/app/feature/edit-event/edit-event.component.html
+++ b/src/app/feature/edit-event/edit-event.component.html
@@ -12,7 +12,7 @@
           [class.opacity-20]="loading() === true">
           <app-timeline-event-main-content [event]="preview" />
         </div>
-        <div class="timeline-end h-148 w-full lg:h-136">
+        <div class="timeline-end w-full">
           <app-edit-event-form
             [editEvent]="event"
             [viewHelper]="formViewHelper()"
@@ -26,6 +26,13 @@
             (saveAction)="saveEvent()"
             (dismissAction)="closeEditForm()" />
         </div>
+
+        <button
+          class="close btn btn-circle btn-error btn-sm absolute -right-4 -top-4 hidden lg:flex"
+          [attr.disabled]="loading() === true ? true : null"
+          (click)="closeEditForm()">
+          ✕
+        </button>
 
         <hr class="bg-accent" [class.opacity-20]="loading() === true" />
       </li>
