--- a/src/app/feature/edit-event/edit-event-form/edit-event-form.component.scss
+++ b/src/app/feature/edit-event/edit-event-form/edit-event-form.component.scss
@@ -3,23 +3,14 @@
 .edit-form {
   @apply timeline-box relative mt-4 bg-base-300 pt-0 lg:mt-0;
 
-  &.active-tab-0 .tab-content-0,
-  &.active-tab-1 .tab-content-1,
-  &.active-tab-2 .tab-content-2,
-  &.active-tab-3 .tab-content-3,
-  &.active-tab-4 .tab-content-4,
-  &.active-tab-5 .tab-content-5 {
-    @apply block;
+  .form-tab-content {
+    @apply hidden h-92;
+
     animation-duration: g.$animation-duration;
     animation-name: swipe-left-tab-content;
-  }
 
-  .tab-content-0,
-  .tab-content-1,
-  .tab-content-2,
-  .tab-content-3,
-  .tab-content-4,
-  .tab-content-5 {
-    @apply hidden h-92;
+    &.active {
+      @apply block;
+    }
   }
 }
