--- a/src/app/feature/edit-event/edit-event-form/tabs/tabs.component.scss
+++ b/src/app/feature/edit-event/edit-event-form/tabs/tabs.component.scss
@@ -1,19 +1,3 @@
-.active-tab-0 a.tab-0.btn,
-.active-tab-1 a.tab-1.btn,
-.active-tab-2 a.tab-2.btn,
-.active-tab-3 a.tab-3.btn,
-.active-tab-4 a.tab-4.btn,
-.active-tab-5 a.tab-5.btn {
-  @apply btn-secondary;
-
-  ng-icon {
-    @apply text-primary-content;
-  }
-  span {
-    @apply lg:block;
-  }
-}
-
 .tabs a {
   ng-icon {
     @apply text-primary;
@@ -21,5 +5,16 @@
 
   span {
     @apply hidden;
+  }
+
+  &.active {
+    @apply btn-secondary;
+
+    ng-icon {
+      @apply text-primary-content;
+    }
+    span {
+      @apply lg:block;
+    }
   }
 }
