--- a/src/app/feature/edit-event/edit-event-form/edit-event-form.component.html
+++ b/src/app/feature/edit-event/edit-event-form/edit-event-form.component.html
@@ -8,29 +8,29 @@
     <app-edit-event-form-text-input
       [form]="editForm"
       class="form-tab-content"
-      [class.active]="activeTab()?.uuid === 'text'" />
+      [class.active]="activeTab().uuid === 'text'" />
     <app-edit-event-form-upload-input
       [previewImage]="viewHelper().image"
       (selectFile)="handleSelectFile($event)"
       class="form-tab-content"
-      [class.active]="activeTab()?.uuid === 'upload'" />
+      [class.active]="activeTab().uuid === 'upload'" />
 
     <app-edit-event-form-date-time-input
       [form]="editForm"
       class="form-tab-content"
-      [class.active]="activeTab()?.uuid === 'date'" />
+      [class.active]="activeTab().uuid === 'date'" />
     <app-edit-event-form-tags-input
       [form]="editForm"
       [inputTags]="editForm.controls.tags.value || []"
       [isDisabled]="loading()"
       (outputTags)="setTags($event)"
       class="form-tab-content"
-      [class.active]="activeTab()?.uuid === 'tags'" />
+      [class.active]="activeTab().uuid === 'tags'" />
     <app-edit-event-form-link-input
       [form]="editForm"
       [preview]="viewHelper().url"
       class="form-tab-content"
-      [class.active]="activeTab()?.uuid === 'link'" />
+      [class.active]="activeTab().uuid === 'link'" />
   </div>
 
   <div class="mt-8 flex place-items-center gap-4 lg:hidden">
