feat: add load more action for events store

--- a/src/app/pages/authorized/my/my-page.component.html
+++ b/src/app/pages/authorized/my/my-page.component.html
@@ -27,6 +27,7 @@
             (filterByTag)="filterByTag($event)"
             (delete)="deleteEvent($event)"
             (edit)="editEvent($event)"
+            (loadMore)="loadMoreEvents()"
             [canEdit]="true" />
 
           <app-modal-confirm
