feat: show 'load more' button for events

--- a/src/app/pages/authorized/my/my-page.component.html
+++ b/src/app/pages/authorized/my/my-page.component.html
@@ -28,7 +28,9 @@
             (delete)="deleteEvent($event)"
             (edit)="editEvent($event)"
             (loadMore)="loadMoreEvents()"
-            [canEdit]="true" />
+            [canEdit]="true"
+            [isLoading]="isEventsLoading()"
+            [hasMore]="hasMoreEvents()" />
 
           <app-modal-confirm
             [show]="showConfirmWindow()"
