fix: add animate.css

--- a/src/app/feature/edit-event/edit-event-form/edit-event-form.component.scss
+++ b/src/app/feature/edit-event/edit-event-form/edit-event-form.component.scss
@@ -6,8 +6,8 @@
   .form-tab-content {
     @apply hidden h-92;
 
+    animation: backInRight;
     animation-duration: g.$animation-duration;
-    animation-name: swipe-left-tab-content;
 
     &.active {
       @apply block;
