--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,6 +4,7 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url('animate.css');
 @import url('./assets/css/global.scss');
 @import url('./assets/css/animation.scss');
 
