feat: add animation to events on timeline

--- a/src/app/feature/timeline/timeline.component.html
+++ b/src/app/feature/timeline/timeline.component.html
@@ -1,6 +1,5 @@
 <ul
-  class="timeline timeline-vertical timeline-snap-icon max-md:timeline-compact"
-  appAnimate>
+  class="timeline timeline-vertical timeline-snap-icon overflow-hidden max-md:timeline-compact">
   @for (event of timeline(); track $index; let odd = $odd) {
     <li
       class="timeline-item mt-4"
