fix: fix width of app

--- a/src/app/share/hero/hero.component.html
+++ b/src/app/share/hero/hero.component.html
@@ -1,4 +1,4 @@
-<div class="hero rounded-t-xl">
+<div class="hero rounded-t-lg">
   <div class="hero-content flex-col lg:flex-row-reverse">
     <ng-content></ng-content>
   </div>
