--- a/src/app/share/layout/footer/footer.component.html
+++ b/src/app/share/layout/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="footer bg-neutral p-4 text-neutral-content">
+<footer class="footer rounded-t-lg bg-neutral p-4 text-neutral-content">
   <aside class="grid grid-flow-col gap-4">
     <span class="logo block px-2">timeline</span>
     <p class="hidden lg:block">Copyright © 2024 - All right reserved</p>
