--- a/src/app/share/layout/layout.component.html
+++ b/src/app/share/layout/layout.component.html
@@ -1,7 +1,7 @@
 <app-header />
 <div
   class="flex min-h-[calc(100vh-70px-64px)] place-content-center bg-base-100">
-  <div class="relative my-4 w-full max-w-5xl">
+  <div class="relative my-4 w-full">
     <div
       class="relative z-10 h-full rounded-lg bg-base-200 shadow-xl shadow-base-300">
       <ng-content></ng-content>
