--- a/src/app/share/layout/header/header.component.html
+++ b/src/app/share/layout/header/header.component.html
@@ -1,4 +1,4 @@
-<div class="navbar bg-secondary">
+<div class="navbar rounded-b-lg bg-secondary">
   <div class="flex-1">
     <a class="logo btn text-xl" href="/"> timeline </a>
   </div>
