fix: fix design

--- a/src/app/feature/edit-event/edit-event-form/tabs/tabs.component.html
+++ b/src/app/feature/edit-event/edit-event-form/tabs/tabs.component.html
@@ -1,5 +1,6 @@
 <h2 class="form-tabs-title -mt-4 flex justify-center">
-  <span class="w-52 rounded-t-lg text-center text-info-content">
+  <span
+    class="w-52 rounded-t-lg border border-base-200 border-l-base-300 border-r-base-300 border-t-base-300 bg-base-200 text-center">
     {{ activeTab().title }}
   </span>
 </h2>
