--- a/src/app/pages/non-authorized/index/index-page.component.html
+++ b/src/app/pages/non-authorized/index/index-page.component.html
@@ -38,4 +38,7 @@
       </a>
     </p>
   </div>
+  <div class="mt-4 hidden rounded-lg bg-base-100 p-4">
+    <app-content-title title="Features" class="text-primary" />
+  </div>
 </app-layout>
