--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,6 +7,8 @@
 @import url('animate.css');
 @import url('./assets/css/global.scss');
 @import url('./assets/css/animation.scss');
+// <uniquifier>: Use a unique and descriptive class name
+// <weight>: Use a value from 100 to 700
 
 h1,
 h2,
